// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prints extra error properties to stderr 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: hi
  at <eval> (<evalScript>) {
  something: true
  somethingElse: false
}
",
  "stdout": "",
}
`;

exports[`prints thrown errors to stderr 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "ReferenceError: 'blahhhh' is not defined
  at <eval> (<evalScript>)
",
  "stdout": "",
}
`;

exports[`prints thrown non-errors to stderr 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Non-error value was thrown: "nope"
",
  "stdout": "",
}
`;
